safari preview toggle and button alignment fix

--- a/assets/components/discuss/themes/modx/css/index.css
+++ b/assets/components/discuss/themes/modx/css/index.css
@@ -1287,11 +1287,14 @@ textarea {
 .dis-action-btn,
 a.Button,
 .Button {
+	display:-moz-inline-stack;
+	display:inline-block;
+	zoom:1;
+	*display:inline;
 	cursor: pointer;
-	margin: 8px 0;
+	margin: 8px 0 0;
 	font-size: 12px;
 	font-weight: bold;
-	line-height: 30px;
 	padding: 6px;
 	background: #f8f8f8;
 	color: #555;
@@ -3316,6 +3319,10 @@ h4 a.normal-type {
     padding: 1px 6px 0;
     text-decoration: none;
 }
+
+a.dis-preview {
+	float: right;
+	}
 
 .dis-post-preview {
     margin: 0 0 15px;
